# policygraph-tables-to-triples

./: .gitignore  README.md  manifest.json  pyproject.toml
.github/workflows/: ci.yml
docs/: codex_build_notes.md  semantic_artifacts.md
ontology/: policygraph.ttl
policygraph/: .gitignore  Makefile  README.md  docker-compose.yml
policygraph/config/: morph-kgc.ini
policygraph/data/raw/: claims.csv  coverages.csv  customers.csv  policies.csv
policygraph/docs/: competency_questions.md  modeling_notes.md  pipeline_walkthrough.md
policygraph/mappings/: policygraph.rml.ttl
policygraph/queries/: claims_outside_policy_period.rq  claims_with_unlisted_coverage_type.rq  missing_policyholders.rq  open_claims.rq
policygraph/shapes/: policygraph.shacl.ttl
policygraph/src/policygraph/: __init__.py  build_ontology.py  validate_graph.py
policygraph/tests/: __init__.py  conftest.py  test_api.py  test_fuseki_scripts.py  test_profile_tables.py  test_semantic_service.py  test_validation_expected_findings.py
queries/: account_context_construct.rq  active_policies.rq
scripts/: load_fuseki.sh  query_fuseki.sh
src/policygraph/: api.py  materialize_graph.py  paths.py  profile_tables.py  query_graph.py  semantic_service.py
tests/: test_materialized_graph.py  test_ontology_contract.py  test_sparql_queries.py
