[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policygraph"
version = "0.1.0"
description = "Semantic data engineering tutorial app for insurance CSV to RDF workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "rdflib",
  "pyshacl",
  "morph-kgc",
  "fastapi",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
